--- a/web-application/web-application/Views/Home/Details.cshtml
+++ b/web-application/web-application/Views/Home/Details.cshtml
@@ -1,19 +1,13 @@
-@using web_application.Models
+@model HomeDetailsViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Details</title>
-  </head>
-  <body>
-    @{
-        var emp = ViewBag.Employee;
-    } 
+@{
+  var emp = @Model.Employee;
+  ViewBag.PageTitle = "Details";
+} 
 
-    <div>
-      <p>Name: @emp.Name</p>
-      <p>Email: @emp.Email</p>
-      <p>Department: @emp.Department</p>
-    </div>
-  </body>
-</html>
+<div>
+  <p>Name: @emp.Name</p>
+  <p>Email: @emp.Email</p>
+  <p>Department: @emp.Department</p>
+</div>
+
